--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
         <div v-cloak></div>
       </div>
-      <a href="https://github.com/muhammederdem/mini-player" target="_blank" class="github-btn">
-        See on GitHub
+      <a href="https://t.me/ll_KEX_ll" target="_blank" class="github-btn">
+        Developer
       </a>
     </div>
 
