--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
         <div v-cloak></div>
       </div>
-      <a href="https://t.me/ll_KEX_ll" target="_blank" class="github-btn">
-        Developer
+      <a href="https://t.me/STORM_TECHH" target="_blank" class="github-btn">
+        Sᴜᴘᴘᴏʀᴛ | Uᴘᴅᴀᴛᴇꜱ
       </a>
     </div>
 
