--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div v-cloak></div>
       </div>
       <a href="https://t.me/STORM_TECHH" target="_blank" class="github-btn">
-        Sᴜᴘᴘᴏʀᴛ | Uᴘᴅᴀᴛᴇꜱ
+        Sᴜᴘᴘᴏʀᴛ | Uᴘᴅᴀᴛᴇs
       </a>
     </div>
 
