--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       href="https://meyerweb.com/eric/tools/css/reset/reset.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Mini Player</title>
+    <link rel="shortcut icon" href="https://envs.sh/Ubp.jpg" type="image/x-icon">    
+    <title>Vᴏʀᴛᴇx ⍱</title>
   </head>
   <body>
     <div class="wrapper" id="app">
