--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://meyerweb.com/eric/tools/css/reset/reset.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="shortcut icon" href="https://envs.sh/Ubp.jpg" type="image/x-icon">    
+    <link rel="shortcut icon" href="https://envs.sh/U5P.jpg" type="image/x-icon">    
     <title>Vᴏʀᴛᴇx ⍱</title>
   </head>
   <body>
