--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://meyerweb.com/eric/tools/css/reset/reset.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="shortcut icon" href="https://envs.sh/U5P.jpg" type="image/x-icon">    
+    <i class="fa-sharp-duotone fa-solid fa-v" style="--fa-primary-color: #00ebeb; --fa-secondary-color: #00ebeb;"></i>
     <title>Vᴏʀᴛᴇx ⍱</title>
   </head>
   <body>
