--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
+    <title>Vᴏʀᴛᴇx ⍱</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,7 +11,7 @@
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-[410px] bg-white shadow-xl rounded-xl p-6">
         <div class="mb-4">
-            <input type="search" id="search-input" placeholder="Search tracks..." class="w-full p-2 border rounded">
+            <input type="search" id="search-input" placeholder="Lᴏᴏᴋɪɴɢ Fᴏʀ A Tᴜɴᴇ ?" class="w-full p-2 border rounded">
         </div>
         <div id="player-content">
             <div class="player-cover mb-4">
