--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .player-cover img {
+            height: auto;
+            max-height: 200px; /* Adjust this value as needed */
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-[410px] bg-white shadow-xl rounded-xl p-6">
@@ -14,10 +21,8 @@
             <input type="search" id="search-input" placeholder="Lᴏᴏᴋɪɴɢ Fᴏʀ A Tᴜɴᴇ ?" class="w-full p-2 border rounded">
         </div>
         <div id="player-content">
-            <div class="player-cover">
-                <transition-group :name="transitionName">
-                    <div class="player-cover__item" v-if="$index === currentTrackIndex" :style="{ backgroundImage: `url(${track.cover})` }"  v-for="(track, $index) in tracks" :key="$index"></div>
-                </transition-group>
+            <div class="player-cover mb-4">
+                <img id="cover-image" src="" alt="Track Cover" class="w-full h-[auto] max-h-[200px] object-cover rounded-xl">
             </div>
             <div class="flex justify-between items-center mb-4">
                 <div>
