--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        .player-cover img {
-            height: auto;
-            max-height: 200px; /* Adjust this value as needed */
-            object-fit: cover;
-        }
+.player-cover img {
+    height: 100%; /* Ensures it takes up the full height of the container */
+    max-height: 200px; /* Sets a max height limit */
+    object-fit: cover; /* Ensures the image covers the area without stretching */
+    object-position: center; /* Centers the image */
+    width: 100%; /* Makes the image responsive */
+}
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
