--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-.player-cover img {
-    height: 100%; /* Ensures it takes up the full height of the container */
-    max-height: 200px; /* Sets a max height limit */
-    object-fit: cover; /* Ensures the image covers the area without stretching */
-    object-position: center; /* Centers the image */
-    width: 100%; /* Makes the image responsive */
-}
-    </style>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-[410px] bg-white shadow-xl rounded-xl p-6">
@@ -24,7 +15,7 @@
         </div>
         <div id="player-content">
             <div class="player-cover mb-4">
-                <img id="cover-image" src="" alt="Track Cover" class="w-full h-[auto] max-h-[200px] object-cover rounded-xl">
+                <img id="cover-image" src="" alt="Track Cover" class="w-full h-[250px] object-cover rounded-xl">
             </div>
             <div class="flex justify-between items-center mb-4">
                 <div>
